<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MW2ClassGenerator</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="random_loadout">Random Class</string>
    <string name="aggressive_loadout">Aggressive Class</string>
    <string name="defensive_loadout">Defensive Class</string>
    <string name="wacky_loadout">Wacky Class</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="equipment">Equipment</string>
    <string name="special">Special</string>
    <string name="deathstreak">Deathstreak</string>
    <string name="perks">Perks</string>
    <string name="killstreaks">Killstreaks</string>
    <string name="randomise">Randomise</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
